sass/_global.scss
.nowrap {
  text-overflow: ellipsis;
  overflow-x: hidden;
  white-space: nowrap;
}

.docs-toolbar-tools {
  margin: 0 20px;
}

md-toolbar .fa {
  padding: 10px 0;
  border: none;
  cursor: pointer;
  width: 30px;
  text-align: center;
}
.fa-linkedin:before {
  color: #008cc9;
}
.fa-soundcloud:before {
  color: #f50;
}

.docs-logo img {
  margin-top: 10px;
  width: 150px;
  height: auto;
  border-radius: 50%;
  transform: scale(1);
}
.docs-logotype {
  font-size: 2rem;
  margin-top: 5px;
}

.docs-menu .fa {
  display: none;
  margin: 0 5px 0 0;
  color: rgba(255, 255, 255, 0.54);
}
.docs-menu hr {
  margin: 4px 16px;
  height: 1px;
  border: none;
  background-color: rgba(255, 255, 255, 0.2);
}
.docs-menu .md-button {
  text-transform: none;
}
.docs-menu .resume-link {
  line-height: 32px;
  padding: 8px 16px;
  font-size: 16px;
  max-height: 48px;
}

